data/all_generated_tests/raw_wast_tests/return_IncorrectHandlingofControlFlowAcrossModuleBoundaries_3090.wast
;; 9. **Test Imports/Exports with Large Operand Stack**:    - Description: Import and export functions that manipulate a large operand stack (e.g., by pushing many values). Verify that returns correctly handle large amounts of data on the stack.    - Constraint: Ensure the correct handling of the operand stack's size and content as it crosses module boundaries.

(assert_invalid
  (module
    (import "env" "large_stack" (func $large_stack (param i32) (result i32)))
    (func $testLargeStackOverflow (result i32)
        (i32.const 0)
        (call $large_stack)
        (call $large_stack)
        (call $large_stack)
        (call $large_stack)
        (call $large_stack)
        (call $large_stack)
        (call $large_stack)
        (call $large_stack)
        (call $large_stack)
        (call $large_stack)
        (return)
    )
    (export "testLargeStackOverflow" (func $testLargeStackOverflow))
  )
  "type mismatch"
)